# ch-evm

./: .gitignore  .goreleaser.yaml  Cargo.toml  Cross.toml  Makefile  README.md  install-bundle.sh
.github/workflows/: goreleaser.yaml  release.yaml
benchmark/: README.md
benchmark/queries/: benchmark.sql  create_sample.sql
config/: convert_format_function.xml  ethereum_decode_tx_function.xml  ethereum_rpc_call_function.xml  ethereum_rpc_function.xml  evm_decode_call_function.xml  evm_decode_calldata_function.xml  evm_decode_event_function.xml  evm_descriptor_from_fullsig_function.xml  evm_signature_from_descriptor_function.xml  keccak256_function.xml
docs/: json_rpc_client.md
examples/queries/convert_format/: 01.sql  02.sql
examples/queries/ethereum_decode_tx/: simple_01.sql
examples/queries/ethereum_rpc/: ethereum_rpc_eth_get_block_receipts.sql  ethereum_rpc_get_block_by_number.sql  ethereum_rpc_get_logs.sql  fail_on_error.sql  fail_on_null.sql  tip.sql
examples/queries/ethereum_rpc_call/: balance_of.sql
examples/queries/evm_decode/: evm_decode_call_inline.sql  evm_decode_calldata_inline.sql  evm_decode_event_inline_01.sql  evm_decode_event_inline_02.sql  evm_decode_event_url_01.sql
examples/queries/evm_descriptor_from_fullsig/: 01.sql  02.sql  03.sql
examples/queries/evm_signature_from_descriptor/: 01.sql  02.sql  03.sql
src/: main.rs
src/cache/: cache_ext.rs  mod.rs
src/cli/: mod.rs
src/cli/function/: convert_format.rs  ethereum_decode_tx.rs  ethereum_rpc.rs  ethereum_rpc_call.rs  evm_decode_call.rs  evm_decode_calldata.rs  evm_decode_event.rs  evm_descriptor_from_fullsig.rs  evm_signature_from_descriptor.rs  mod.rs  (+1 more)
src/evm/: abi_item_provider.rs  decoded_event_ext.rs  mod.rs
src/json/: mod.rs
(+12 files in other folders)
