[package]
name = "ch-evm"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "0.15.9"
alloy-dyn-abi = "1.1.0"
alloy-json-abi = "1.1.0"
alloy-primitives = "1.1.0"
alloy-rpc-client = "0.15.9"
anyhow = "1.0.98"
arrow = "55.1.0"
arrow-ipc = { version = "55.1.0", features = ["lz4"]}
clap = { version = "4.5.37", features = ["derive"]}
futures = "0.3.31"
mini-moka = "0.10.3"
moka = { version = "0.12.10", features = ["sync"]}
serde = "1.0.219"
serde_arrow = { version="0.13.3", features = ["arrow-55"]}
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "io-std", "io-util", "fs"] }
jemallocator = "0.5.4"
